syntax = "proto3";

package article;

option go_package = "./art";


message Id {
  int64 id = 1;
}

message Empty {}

message ArticleRes {
  int64 id = 1;
  string type = 2 ;
  string content = 3 ;
  string author = 4 ;
}

message Article {
  string type = 2 ;
  string content = 3 ;
  string author = 4 ;
}

service article {
  rpc getServer(Id) returns (ArticleRes);
  rpc postServer(Article) returns (ArticleRes);
  rpc putServer(ArticleRes) returns (ArticleRes);
  rpc deleteServer(Id) returns(Empty);
}

message AuthorMes {
  int64 id = 1;
  string author = 2;
  bool  signedPerson = 3;
  int64 cash = 4;
}

message AuthorMesRes {
  repeated AuthorMes authors = 1;
}

message AuthorTotal {
  int64 id = 1;
  string author = 2;
  bool deleted = 3;
  int64 mesCount = 4;
  int64 cashSum = 5;
}


message TotalRes{
  repeated AuthorTotal  authorTotals = 1;
}

service author {
  rpc getAuthor(Id) returns (AuthorMesRes);
  rpc getAuthorTotal(Empty) returns (TotalRes);
}
